# Animation-Sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Application.h  IApplication.h  SandboxApp.h
include/math/: vec3.cpp  vec3.h
src/: SandboxApp.cpp
